spade-tests/src/snapshots/spade_tests__hir_lowering__array_shorthand_too_long.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn top() {
    let _ = [0u2; 11111111111111111111111111111111111111111111111111];
}


error: Array cannot contain more than usize::max (18446744073709551615) elements
  ┌─ testinput:2:19
  │
2 │     let _ = [0u2; 11111111111111111111111111111111111111111111111111];
  │                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
